--- a/myunraid.ini
+++ b/myunraid.ini
@@ -9,6 +9,7 @@
 ;规则集定义
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/sereinxx/guize/refs/heads/main/Direct.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/sereinxx/guize/refs/heads/main/ProxyLite.list
+ruleset=🚀 节点选择,https://raw.githubusercontent.com/sereinxx/guize/refs/heads/main/buchong1.list
 ruleset=🤖 AI,https://raw.githubusercontent.com/sereinxx/guize/refs/heads/main/AI.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
