--- a/config (1).yaml
+++ b/config (1).yaml
@@ -8,17 +8,7 @@ proxy-providers:
       url: https://www.gstatic.com/generate_204
       interval: 300
     proxy: 🟢 直连
-    url: "订阅链接1"
-  Airport_02:
-    type: http
-    interval: 1800
-    health-check:
-      enable: true
-      url: https://www.gstatic.com/generate_204
-      interval: 300
-    proxy: 🟢 直连
-    url: "订阅链接2"
-
+    url: "https://fbapiv2.fbsublink.com/flydsubal/ptt8dm31ruzp8std?clash=1&extend=1"
 
 unified-delay: true
 tcp-concurrent: true
